# docs/swagger.json
@@ -64,7 +64,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.User"
+                            "$ref": "#/definitions/entities.UserCreateRequest"
                         }
                     }
                 ],
@@ -273,6 +273,23 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "info": {
+                    "$ref": "#/definitions/entities.UserInfo"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "entities.UserCreateRequest": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
                 },
                 "info": {
                     "$ref": "#/definitions/entities.UserInfo"
